fix the align issue on the top page

--- a/style_main.css
+++ b/style_main.css
@@ -94,7 +94,7 @@ body:not(.single) .sidebar{
 		margin: 8.3333% 2.6em 0 0;                                                               
 		padding-top: 4%;                                                                         
 	}
-	body:not(.single) .hentry:nth-child(4n){ margin: 0; margin-top: 8.3333%; }
+	body:not(.single) .hentry:nth-child(3n+1){ margin: 0; margin-top: 8.3333%; }
 
 	body:not(.single) .hentry.has-post-thumbnail{
 		padding-top: 0;                                                                          
